--- a/src/app/features/scoreboard/components/admin-forms/scoreboard-settings-forms/scoreboard-settings-forms.component.html
+++ b/src/app/features/scoreboard/components/admin-forms/scoreboard-settings-forms/scoreboard-settings-forms.component.html
@@ -20,6 +20,9 @@
         [localShowTime]="localShowTime()"
         [localShowPlayClock]="localShowPlayClock()"
         [localShowDownDistance]="localShowDownDistance()"
+        [showPlayClockSwitch]="displaySettingsShowPlayClock()"
+        [showDownDistanceSwitch]="displaySettingsShowDownDistance()"
+        [periodMode]="displaySettingsPeriodMode()"
         [localLanguageCode]="localLanguage()"
         (toggleQtr)="onToggleQtr($event)"
         (toggleTime)="onToggleTime($event)"
