--- a/src/app/features/scoreboard/components/admin-forms/time-forms/time-forms.component.less
+++ b/src/app/features/scoreboard/components/admin-forms/time-forms/time-forms.component.less
@@ -153,6 +153,13 @@
   text-align: center;
 }
 
+.setting-hint {
+  margin: 0;
+  font-size: 12px;
+  color: var(--tui-text-tertiary);
+  text-align: center;
+}
+
 .save-button {
   min-width: 80px;
   font-weight: 600;
