--- a/src/app/features/sport-scoreboard-presets/components/list/sport-scoreboard-preset-list.component.html
+++ b/src/app/features/sport-scoreboard-presets/components/list/sport-scoreboard-preset-list.component.html
@@ -29,6 +29,7 @@
             <div class="preset-list__meta">
               <span>Max Gameclock: {{ preset.gameclock_max ?? 'N/A' }}s</span>
               <span>Init: {{ getInitialTimeLabel(preset.initial_time_mode, preset.initial_time_min_seconds) }}</span>
+              <span>Variant: {{ getPeriodClockVariantLabel(preset.period_clock_variant) }}</span>
               <span>Direction: {{ preset.direction }}</span>
               <span>Stop: {{ preset.on_stop_behavior }}</span>
             </div>
