feat(matches): add QR code for match detail URL

--- a/src/app/features/matches/components/detail/match-detail.component.html
+++ b/src/app/features/matches/components/detail/match-detail.component.html
@@ -61,6 +61,18 @@
           Scoreboard View
         </button>
       </div>
+
+      @if (qrCodeDataUrl(); as qrUrl) {
+        <div class="match-detail__qr">
+          <img
+            [src]="qrUrl"
+            [alt]="'QR code for ' + matchTitle()"
+            class="match-detail__qr-image"
+            width="160"
+            height="160"
+          />
+        </div>
+      }
     </div>
 
     <div class="match-detail__subnav">
