--- a/src/app/shared/components/entity-header/entity-header.component.html
+++ b/src/app/shared/components/entity-header/entity-header.component.html
@@ -7,7 +7,7 @@
       <img [src]="logoUrl() || ''" class="entity-header__logo" alt="Entity logo" />
     }
     <h1 class="entity-header__title">{{ title() | uppercase }}</h1>
-    @if (showGear()) {
+    @if (showGear() && isAdmin()) {
       <div
         class="entity-header__menu-container"
         tuiActiveZone
