min height of scoreboard

--- a/src/app/features/scoreboard/components/display/scoreboard-display.component.less
+++ b/src/app/features/scoreboard/components/display/scoreboard-display.component.less
@@ -350,6 +350,7 @@
     border-right: 1px solid #bababa;
     position: relative;
     overflow: visible;
+    min-height: 44px;
 
     .info-value {
       font-size: 26px;
